# emotime

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  index.html  params.json
caffenet/: addtag.py  emotime.prototxt  emotime_solver.prototxt  emotime_test.prototxt
doc/: doxyconfig
include/: BoostEmoDetector.h  EmoDetector.h  FaceDetector.h  FacePreProcessor.h  GaborBank.h  SVMEmoDetector.h
report/: .gitignore  approach.tex  architecture.tex  goal.tex  main.tex  organization.tex  parameters.tex  results.tex  workflow.tex
report/bib/: bib.bib
resources/: haarcascade_frontalface_cbcl1.xml
src/: CMakeLists.txt
src/adaboost/: CMakeLists.txt  adapredict.cpp  adapredict.h  adapredict_cli.cpp  adatrain.cpp  adatrain.h  adatrain_cli.cpp  featselect.cpp  featselect.h  featselect_cli.cpp  varimportance_cli.cpp
src/dataset/: CMakeLists.txt  calcFeatures.py  cleandataset.sh  cropFaces.py  datasetConfigParser.py  datasetCropFaces.py  datasetFeatures.py  datasetFillCK.py  datasetInit.py  datasetPrepTrain.py  datasetTrain.py  datasetVerifyPrediction.py  default.cfg  default.conf  example_dataset.cfg  filldatasetCohnKanade.py  gui.py  initdataset.py  train_models.py  train_models.sh  trainfiles.py
src/detector/: BoostEmoDetector.cpp  BoostEmoDetector.h  CMakeLists.txt  DetectionParameters.h  EmoDetector.cpp  EmoDetector.h  FacePreProcessor.cpp  FacePreProcessor.h  SVMEmoDetector.cpp  SVMEmoDetector.h  boost_emo_detector.cpp  boost_emo_detector.h  boost_emo_detector_cli.cpp  emo_detector.cpp  emo_detector.hpp  emo_detector_cli.cpp  preprocessor.hpp  svm_emo_detector.cpp  svm_emo_detector.h  svm_emo_detector_cli.cpp
src/facecrop/: CMakeLists.txt  facecrop.cpp  facecrop.h  facecrop_cli.cpp  facedetector.cpp  facedetector.h  registration.cpp  registration.h
src/facedetector/: CMakeLists.txt  FaceDetector.cpp  FaceDetector.h  facecrop_cli.cpp
src/gaborbank/: CMakeLists.txt  GaborBank.cpp  GaborBank.h  GaborKernel.h  gabor.cpp  gabor.h  gaborbank.cpp  gaborbank.h  gaborbank_cli.cpp  test.cpp
src/gui/: ACapture.cpp  ACapture.h  AGui.cpp  AGui.h  CMakeLists.txt  DebugGui.cpp  DebugGui.h  EmotimeGui.cpp  EmotimeGui.h  GaborGui.hpp  ImageCapture.cpp  ImageCapture.h  VideoCapture.cpp  VideoCapture.h  WebcamCapture.h  agui.hpp  boost_debug_gui.cpp  capture.hpp  debuggui.hpp  emotimegui.hpp  emotimegui_cli.cpp  emotimevideo_cli.cpp  emotimevideodebug_cli.cpp  gaborgui_cli.cpp
src/svm/: CMakeLists.txt  svmpredict.cpp  svmpredict.h  svmpredict_cli.cpp  svmtrain.cpp  svmtrain.h  svmtrain_cli.cpp
src/training/: AdaBoostClassifier.cpp  AdaBoostClassifier.h  CMakeLists.txt  Classifier.cpp  Classifier.h  SVMClassifier.cpp  SVMClassifier.h  TrainingParameters.h  train_cli.cpp
src/utils/: CMakeLists.txt  csv.cpp  csv.h  matrix_io.cpp  matrix_io.h  string_utils.cpp  string_utils.h
test/: adaboost_train_error.sh  boost_emodetector.sh  clahe.py  face_test.py  gabor.py  gaborpng.sh  test_facerotation.py  view.py
